--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
+            <li class="nav-item d-flex justify-content-center">
               <a class="nav-link" href="#prime">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item d-flex justify-content-center">
               <a class="nav-link" href="#info">About</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item d-flex justify-content-center">
               <a class="nav-link" href="#fitur">Menu</a>
             </li>
           </ul>
@@ -145,7 +145,7 @@
           <h2>Menu</h2>
           <div class="row row-cols-1 row-cols-md-4 p-3">
             <div
-              class="card-trip"
+              class="card-trip pb-2"
               data-bs-toggle="modal"
               data-bs-target="#exampleModal1"
             >
@@ -161,7 +161,7 @@
               </div>
             </div>
             <div
-              class="card-trip"
+              class="card-trip pb-2"
               data-bs-toggle="modal"
               data-bs-target="#exampleModal2"
             >
@@ -177,7 +177,7 @@
               </div>
             </div>
             <div
-              class="card-trip"
+              class="card-trip pb-2"
               data-bs-toggle="modal"
               data-bs-target="#exampleModal3"
             >
@@ -193,7 +193,7 @@
               </div>
             </div>
             <div
-              class="card-trip"
+              class="card-trip pb-2"
               data-bs-toggle="modal"
               data-bs-target="#exampleModal4"
             >
