--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
+            <li class="nav-item d-flex justify-content-center">
               <a class="nav-link" href="#prime">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item d-flex justify-content-center">
               <a class="nav-link" href="#info">About</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item d-flex justify-content-center">
               <a class="nav-link" href="#fitur">Menu</a>
             </li>
           </ul>
@@ -64,7 +64,7 @@
       class="prime w-100 h-100 p-3 mx-auto d-flex align-items-center"
     >
       <main>
-        <h1>Yayasan Ihsanul Amal</h1>
+        <h1>Nama</h1>
         <h4><i class="bi bi-geo-alt-fill"></i> Alamat</h4>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, odio!
@@ -132,13 +132,7 @@
             </p>
           </div>
           <div class="col-md-4">
-            <img
-              src="img/b.visi-misi.jpg"
-              alt=""
-              class="imgvimi"
-              width="120%"
-              height="100%"
-            />
+            <img src="img/b.visi-misi.jpg" alt="" width="100%" />
           </div>
         </div>
       </div>
@@ -151,12 +145,12 @@
           <h2>Menu</h2>
           <div class="row row-cols-1 row-cols-md-4 p-3">
             <div
-              class="card-trip"
+              class="card-trip pb-2"
               data-bs-toggle="modal"
               data-bs-target="#exampleModal1"
             >
               <div class="card shadow-sm p-3 mb-5 bg-white rounded h-100">
-                <h5 class="card-title mt-3">Fitur 1</h5>
+                <h5 class="card-title mt-3">Card title</h5>
                 <h1 class="bi bi-book mt-4 mb-4"></h1>
                 <div class="card-body">
                   <p class="card-text">
@@ -167,12 +161,12 @@
               </div>
             </div>
             <div
-              class="card-trip"
+              class="card-trip pb-2"
               data-bs-toggle="modal"
               data-bs-target="#exampleModal2"
             >
               <div class="card shadow-sm p-3 mb-5 bg-white rounded h-100">
-                <h5 class="card-title mt-3">Fitur 2</h5>
+                <h5 class="card-title mt-3">Card title</h5>
                 <h1 class="bi bi-building mt-4 mb-4"></h1>
                 <div class="card-body">
                   <p class="card-text">
@@ -183,12 +177,12 @@
               </div>
             </div>
             <div
-              class="card-trip"
+              class="card-trip pb-2"
               data-bs-toggle="modal"
               data-bs-target="#exampleModal3"
             >
               <div class="card shadow-sm p-3 mb-5 bg-white rounded h-100">
-                <h5 class="card-title mt-3">Fitur 3</h5>
+                <h5 class="card-title mt-3">Card title</h5>
                 <h1 class="bi bi-clipboard mt-4 mb-4"></h1>
                 <div class="card-body">
                   <p class="card-text">
@@ -199,12 +193,12 @@
               </div>
             </div>
             <div
-              class="card-trip"
+              class="card-trip pb-2"
               data-bs-toggle="modal"
               data-bs-target="#exampleModal4"
             >
               <div class="card shadow-sm p-3 mb-5 bg-white rounded h-100">
-                <h5 class="card-title mt-3">Fitur 4e</h5>
+                <h5 class="card-title mt-3">Card title</h5>
                 <h1 class="bi bi-image mt-4 mb-4"></h1>
                 <div class="card-body">
                   <p class="card-text">
@@ -364,7 +358,7 @@
     </div>
 
     <!-- footer -->
-    <footer class="footer py-2">
+    <footer class="footer py-2" style="background-color: rgb(197, 197, 197)">
       <div class="container">
         <div class="row">
           <!-- Footer Location-->
@@ -422,7 +416,7 @@
         <script type="text/javascript">
           document.write(new Date().getFullYear());
         </script>
-        Yayasan Ihsanul Amal</span
+        Website Landing Page.</span
       >
     </footer>
   </body>
