--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       class="prime w-100 h-100 p-3 mx-auto d-flex align-items-center"
     >
       <main>
-        <h1>Nama</h1>
+        <h1>Yayasan Ihsanul Amal</h1>
         <h4><i class="bi bi-geo-alt-fill"></i> Alamat</h4>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, odio!
@@ -73,39 +73,41 @@
     </section>
 
     <!-- Slidshow -->
-    <div class="carousel-container-fluid pt-3">
-      <div
-        id="carouselExampleControls"
-        class="carousel slide col-md-10 offset-md-1"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="img/gambar1.jpg"
-              class="d-block"
-              alt="..."
-              width="100%"
-              height="300"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="img/gambar2.jpg"
-              class="d-block"
-              alt="..."
-              width="100%"
-              height="300"
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="img/gambar3.jpg"
-              class="d-block"
-              alt="..."
-              width="100%"
-              height="300"
-            />
+    <div class="slide">
+      <div class="carousel-container-fluid pt-3">
+        <div
+          id="carouselExampleControls"
+          class="carousel slide col-md-10 offset-md-1"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="img/gambar1.jpg"
+                class="d-block"
+                alt="..."
+                width="100%"
+                height="300"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="img/gambar2.jpg"
+                class="d-block"
+                alt="..."
+                width="100%"
+                height="300"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="img/gambar3.jpg"
+                class="d-block"
+                alt="..."
+                width="100%"
+                height="300"
+              />
+            </div>
           </div>
         </div>
       </div>
@@ -132,7 +134,13 @@
             </p>
           </div>
           <div class="col-md-4">
-            <img src="img/b.visi-misi.jpg" alt="" width="100%" />
+            <img
+              src="img/b.visi-misi.jpg"
+              class="imgvimi"
+              alt=""
+              width="120%"
+              height="100%"
+            />
           </div>
         </div>
       </div>
@@ -143,14 +151,14 @@
       <div class="container">
         <div class="p-3 text-center">
           <h2>Menu</h2>
-          <div class="row row-cols-1 row-cols-md-4 p-3">
+          <div class="row row-cols-1 row-cols-md-4 p-3 justify-content-center">
             <div
               class="card-trip pb-2"
               data-bs-toggle="modal"
               data-bs-target="#exampleModal1"
             >
               <div class="card shadow-sm p-3 mb-5 bg-white rounded h-100">
-                <h5 class="card-title mt-3">Card title</h5>
+                <h5 class="card-title mt-3">Fitur 1</h5>
                 <h1 class="bi bi-book mt-4 mb-4"></h1>
                 <div class="card-body">
                   <p class="card-text">
@@ -166,7 +174,7 @@
               data-bs-target="#exampleModal2"
             >
               <div class="card shadow-sm p-3 mb-5 bg-white rounded h-100">
-                <h5 class="card-title mt-3">Card title</h5>
+                <h5 class="card-title mt-3">Fitur 2</h5>
                 <h1 class="bi bi-building mt-4 mb-4"></h1>
                 <div class="card-body">
                   <p class="card-text">
@@ -182,7 +190,7 @@
               data-bs-target="#exampleModal3"
             >
               <div class="card shadow-sm p-3 mb-5 bg-white rounded h-100">
-                <h5 class="card-title mt-3">Card title</h5>
+                <h5 class="card-title mt-3">Fitur 3</h5>
                 <h1 class="bi bi-clipboard mt-4 mb-4"></h1>
                 <div class="card-body">
                   <p class="card-text">
@@ -198,7 +206,7 @@
               data-bs-target="#exampleModal4"
             >
               <div class="card shadow-sm p-3 mb-5 bg-white rounded h-100">
-                <h5 class="card-title mt-3">Card title</h5>
+                <h5 class="card-title mt-3">Fitur 4</h5>
                 <h1 class="bi bi-image mt-4 mb-4"></h1>
                 <div class="card-body">
                   <p class="card-text">
@@ -358,7 +366,7 @@
     </div>
 
     <!-- footer -->
-    <footer class="footer py-2" style="background-color: rgb(197, 197, 197)">
+    <footer class="footer py-2">
       <div class="container">
         <div class="row">
           <!-- Footer Location-->
