--- a/index.html
+++ b/index.html
@@ -119,18 +119,23 @@
         <div class="row">
           <div class="col-md-8 col-10 py-3">
             <h3>Visi</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-              pariatur suscipit, quae facilis assumenda optio praesentium? Quos,
-              nihil enim nam beatae aliquam facilis ipsum veritatis sapiente
-              molestiae velit vero dolores?
+            <p class="misi">
+              "Terwujudnya Generasi yang Shaleh, Cerdas, Mandiri dan Berbudaya
+              Lingkungan"
             </p>
             <h3>Misi</h3>
+            <p>1. Mendidik secara islami agar menjadi generasi yang sholeh</p>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Assumenda nam reprehenderit corrupti ea natus dolores
-              consequuntur. Earum architecto excepturi, facilis repellendus illo
-              deserunt adipisci. Nihil voluptatibus nulla sint alias ipsa.
+              2. Melaksanakan pembelajaran yang mudah, menyenangkan dan
+              menyentuh hati untuk menumbuhkan kecerdasan siswa/i
+            </p>
+            <p>
+              3. Membimbing siswa siswi meningkatkan keterampilan hidup agar
+              mampu beradaptasi dengan Lingkungan
+            </p>
+            <p>
+              4. Menumbuhkan rasa peduli terhadap upaya pelestarian, pencegahan,
+              pencemeran dan kerusakan lingkungan
             </p>
           </div>
           <div class="col-md-4">
